# inamex

backend/: .cursorrules  .env  .env.docker  .gitignore  README.md  database.dbml  docker-compose.yml  load_clients.py  load_projects.py  openapi.json  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/api/: __init__.py  addresses.py  article_order_statuses.py  article_orders.py  article_states.py  articles.py  budgets.py  clients.py  contacts.py  dedicated_times.py  dev.py  order_statuses.py  orders.py  payment_conditions.py  photos.py  project_states.py  projects.py  reports.py  requirement_states.py  requirements.py  suppliers.py  users.py
backend/app/core/: database.py
backend/app/models/: __init__.py  address.py  article.py  article_order.py  article_order_status.py  article_state.py  budget.py  client.py  condicion_pago.py  contact.py  dedicated_time.py  order.py  order_status.py  photo.py  project.py  project_state.py  report.py  requirement.py  requirement_state.py  supplier.py  user.py
backend/dev/old-data/: clients.json  projects.json
backend/tests/: test_addresses.py  test_article_order_statuses.py  test_article_orders.py  test_article_states.py  test_articles.py  test_budgets.py  test_clients.py  test_contacts.py  test_dedicated_times.py  test_order_statuses.py  test_orders.py  test_payment_conditions.py  test_photos.py  test_project_states.py  test_projects.py  test_reports.py  test_requirement_states.py  test_requirements.py  test_suppliers.py  test_users.py
frontend/: .cursorrules  api_description.json  database.dbml  (+3 more)
(+50 files in other folders)
